# ThermalConductivityMPI

./: CMakeLists.txt  README.md  heat_map  make_gif.py  make_gif.sh
src/: conf_reader.cpp  conf_reader.h  main.cpp  main_config.h  thread_safe_queue.h  utils.cpp  utils.h
